
        assert_empty() and assert_nonempty() no longer gives a message
        of "Not an array or hash reference".  If you don't pass an array
        or hash reference, the assertion will just fail with the message
        passe3d in.

        assert_aoh() and assert_datetime() no longer provide a default
        message.

        assert_in() is more strict. Each element of the target array
        must be defined and not a reference.

        assert_exists() and assert_lacks() are more strict.  The list
        of keys to check cannot be empty.

        [ENHANCEMENTS]
        Added assert_context_nonvoid() and assert_context_scalar()
        to assert on how the executing function has been called.


1.26    Sat Dec 26 00:26:23 CST 2020
        [ENHANCEMENTS]
        Add assert_arrayref_nonempty().

        Add assert_hashref_nonempty().

1.24    Tue Oct  6 22:37:06 CDT 2020
        [ENHANCEMENTS]
        The requirement for Perl 5.10 has been reverted to 5.6.1.

1.22    Tue Oct  6 22:03:55 CDT 2020
        [ENHANCEMENTS]
        Add assert_keys_are() for asserting an exact list of keys.

1.20    Fri Aug  9 10:10:06 CDT 2019
        [ENHANCEMENTS]
        Add assert_datetime() for asserting DateTime objects.

1.18    Fri Jul 19 17:12:32 CDT 2019
        [ENHANCEMENTS]
        Added assert_aoh() for asserting an array of hashrefs.

1.16    Fri Aug  4 14:18:51 CDT 2017
        [ENHANCEMENTS]
        Added the following functions:
        * assert_numeric( $n )
        * assert_all_keys_in( \%hash, \@keylist )
        * assert_empty( [\%hash|\@list] )
        * assert_coderef( $ref )
        * assert_isa_in( $ref, \@class_list )
        Thanks to Eric A. Zarko for some of them.  The rest were migrated
        from a private code project.

        Renamed assert_listref() to assert_arrayref(), but keep
        assert_listref() as backward compatibility.  assert_listref()
        may go away in the future.

        [DOCUMENTATION]